bk_ida/gobmkida/g1/play_ascii
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1059:11: error: used type 'SGFTree' (aka 'struct SGFTree_t') where arithmetic or pointer type is required
sgftree = ( SGFTree)v8; 
          ^         ~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1095:48: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgftreeWriteResult( &sgftree, v4, *( float *)v8.m128i_i32, 1); 
                                             ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1112:67: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgftreeCreateHeaderNode( &sgftree, board_size, komi, *( float *)v8.m128i_i32); 
                                                                ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1114:39: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'uint32' (aka 'unsigned int') of different size
gameinfo_clear( gameinfo, board_size, ( __m128i)LODWORD( komi), *( float *)v8.m128i_i32); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1114:78: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
gameinfo_clear( gameinfo, board_size, ( __m128i)LODWORD( komi), *( float *)v8.m128i_i32); 
                                                                           ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1118:22: error: use of undeclared identifier 'pdfa'
v33 = strtok( line, &pdfa.name[70]); 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1223:67: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgftreeCreateHeaderNode( &sgftree, board_size, komi, *( float *)v8.m128i_i32); 
                                                                ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1226:39: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'uint32' (aka 'unsigned int') of different size
gameinfo_clear( gameinfo, board_size, ( __m128i)LODWORD( komi), *( float *)v8.m128i_i32); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1226:78: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
gameinfo_clear( gameinfo, board_size, ( __m128i)LODWORD( komi), *( float *)v8.m128i_i32); 
                                                                           ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/interface/play_ascii.c:1254:62: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgftreeWriteResult( &sgftree, *( double *)&v12, *( float *)v8.m128i_i32, 1); 
                                                           ~~^~~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/play_ascii/src/obj/2/play_ascii.o] Error 1
